# lora-env

./: .gitignore  Cargo.toml  GEMINI.md  README.md
agent/: pyproject.toml
firmware/: Cargo.toml
firmware/.cargo/: memory.x
firmware/src/: main.rs
shared/src/: lib.rs
