[project]
name = "agent"
version = "0.1.0"
description = ""
authors = [
    {name = "ladams537",email = "louistadams3@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]

[tool.poetry]
packages = [{include = "agent", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
