[package]
name = "firmware"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
defmt = "1.0.1"
defmt-rtt = "1.1.0"
embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-rp = { version = "0.9.0", features = ["defmt", "rp2040", "time-driver", "critical-section-impl"] }
embassy-time = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime"] }
embedded-hal-async = "1.0.0"
panic-probe = "1.0.0"
